--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   height: 40vmin;
 }
 
-.App-header {
+.App>.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -29,4 +29,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.roomList {
+  max-width: 20%;
 }
